--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibition-card/exhibition-card.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibition-card/exhibition-card.component.html
@@ -10,6 +10,12 @@
       <div class="info-row">
         <p class="exhibition-dates">{{exhibition.proposal.startDate }} - {{exhibition.proposal.endDate }}</p>
       </div>
+      <div class="info-row rating">
+        <span *ngFor="let star of [1, 2, 3, 4, 5]; let i = index" 
+              [ngClass]="{'filled': i < fullStars, 'half-filled': i === fullStars && hasHalfStar}">
+          ★
+        </span>
+      </div>      
       <div class="info-row">
         <button class="find-out-more-button" (click)="navigateToDetails(exhibition.id)">Find Out More</button>
       </div>
